--- a/pages/docs.html
+++ b/pages/docs.html
@@ -76,9 +76,12 @@
     <a id="use-declarations" class="topic"><strong>13.</strong> Use Declarations</a> <br>
     <a id="preprocessor" class="topic"><strong>14.</strong> Preprocessor</a> <br>
       <a id="preprocessor-directives" class="sub-topic"><strong>14.1</strong> Directives</a> <br>
-    <a id="standard-library" class="topic"><strong>15.</strong> Standard Library</a> <br>
-      <a id="standard-library-builtin" class="sub-topic"><strong>15.1</strong> Built-In</a> <br>
-      <a id="standard-library-io" class="sub-topic"><strong>15.2</strong> io</a> <br>
+    <a id="stdlib" class="topic"><strong>15.</strong> Standard Library</a> <br>
+      <a id="stdlib-builtin" class="sub-topic"><strong>15.1</strong> Built-In</a> <br>
+      <a id="stdlib-debug" class="sub-topic"><strong>15.2</strong> debug</a> <br>
+        <a id="stdlib-debug-assert" class="sub-sub-topic"><strong>15.2.1</strong> assert</a> <br>
+      <a id="stdlib-io" class="sub-topic"><strong>15.3</strong> io</a> <br>
+      <a id="stdlib-os" class="sub-topic"><strong>15.4</strong> os</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
