--- a/pages/docs.html
+++ b/pages/docs.html
@@ -64,8 +64,9 @@
       <a id="type-statics-u64" class="sub-topic"><strong>9.8.</strong> u64</a> <br>
       <a id="type-statics-f32" class="sub-topic"><strong>9.9.</strong> f32</a> <br>
       <a id="type-statics-f64" class="sub-topic"><strong>9.10.</strong> f64</a> <br>
-      <a id="type-statics-size" class="sub-topic"><strong>9.11.</strong> size</a> <br>
-      <a id="type-statics-str" class="sub-topic"><strong>9.12.</strong> str</a> <br>
+      <a id="type-statics-int" class="sub-topic"><strong>9.11.</strong> int</a> <br>
+      <a id="type-statics-uint" class="sub-topic"><strong>9.12.</strong> uint</a> <br>
+      <a id="type-statics-str" class="sub-topic"><strong>9.13.</strong> str</a> <br>
     <a id="namespaces" class="topic"><strong>10.</strong> Namespaces</a> <br>
     <a id="cxx" class="topic"><strong>11.</strong> Cxx</a> <br>
       <a id="cxx-cxx-embedding" class="sub-topic"><strong>11.1.</strong> Cxx Embedding</a> <br>
