--- a/pages/docs.html
+++ b/pages/docs.html
@@ -50,9 +50,10 @@
     <a id="types" class="topic"><strong>8.</strong> Types</a> <br>
       <a id="types-aliasing" class="sub-topic"><strong>8.1.</strong> Aliasing</a> <br>
       <a id="types-casting" class="sub-topic"><strong>8.2.</strong> Casting</a> <br>
-      <a id="types-str" class="sub-topic"><strong>8.3.</strong> str</a> <br>
-      <a id="types-arrays" class="sub-topic"><strong>8.4.</strong> Arrays</a> <br>
-      <a id="types-maps" class="sub-topic"><strong>8.5.</strong> Maps</a> <br>
+      <a id="types-generics" class="sub-topic"><strong>8.3.</strong> Generics</a> <br>
+      <a id="types-str" class="sub-topic"><strong>8.4.</strong> str</a> <br>
+      <a id="types-arrays" class="sub-topic"><strong>8.5.</strong> Arrays</a> <br>
+      <a id="types-maps" class="sub-topic"><strong>8.6.</strong> Maps</a> <br>
     <a id="type-statics" class="topic"><strong>9.</strong> Type Statics</a> <br>
       <a id="type-statics-i8" class="sub-topic"><strong>9.1.</strong> i8</a> <br>
       <a id="type-statics-i16" class="sub-topic"><strong>9.2.</strong> i16</a> <br>
