--- a/pages/docs.html
+++ b/pages/docs.html
@@ -83,7 +83,8 @@
       <a id="stdlib-debug" class="sub-topic"><strong>15.2</strong> debug</a> <br>
         <a id="stdlib-debug-assert" class="sub-sub-topic"><strong>15.2.1</strong> assert</a> <br>
       <a id="stdlib-io" class="sub-topic"><strong>15.3</strong> io</a> <br>
-      <a id="stdlib-os" class="sub-topic"><strong>15.4</strong> os</a> <br>
+      <a id="stdlib-mem" class="sub-topic"><strong>15.4</strong> mem</a> <br>
+      <a id="stdlib-os" class="sub-topic"><strong>15.5</strong> os</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
