--- a/pages/docs.html
+++ b/pages/docs.html
@@ -43,6 +43,7 @@
     <a id="memory" class="topic"><strong>6.</strong> Memory</a> <br>
       <a id="memory-pointers" class="sub-topic"><strong>6.1.</strong> Pointers</a> <br>
       <a id="memory-memory-management" class="sub-topic"><strong>6.2.</strong> Memory Management</a> <br>
+      <a id="memory-references" class="sub-topic"><strong>6.3.</strong> References</a> <br>
     <a id="error-handling" class="topic"><strong>7.</strong> Error Handling</a> <br>
       <a id="error-handling-error-structure" class="sub-topic"><strong>7.1.</strong> Error Structure</a> <br>
       <a id="error-handling-panics" class="sub-topic"><strong>7.2.</strong> Panics</a> <br>
