Fixes in english language

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -21,7 +21,7 @@
       <a id="compiler-config-files" class="sub-topic"><strong>2.2.</strong> Config Files</a> <br>
       <a id="compiler-compiling" class="sub-topic"><strong>2.3.</strong> Compiling</a> <br>
     <a id="project" class="topic"><strong>3.</strong> Project</a> <br>
-      <a id="project-directory-order" class="sub-topic"><strong>3.1.</strong> Direcotory Order</a> <br>
+      <a id="project-directory-order" class="sub-topic"><strong>3.1.</strong> Directory Order</a> <br>
       <a id="project-naming" class="sub-topic"><strong>3.2.</strong> Naming</a> <br>
       <a id="project-declarations" class="sub-topic"><strong>3.3.</strong> Declarations</a> <br>
       <a id="project-defines" class="sub-topic"><strong>3.4.</strong> Defines</a> <br>
