--- a/pages/docs.html
+++ b/pages/docs.html
@@ -87,6 +87,7 @@
       <a id="stdlib-io" class="sub-topic"><strong>15.4</strong> io</a> <br>
       <a id="stdlib-mem" class="sub-topic"><strong>15.5</strong> mem</a> <br>
       <a id="stdlib-os" class="sub-topic"><strong>15.6</strong> os</a> <br>
+      <a id="stdlib-reflect" class="sub-topic"><strong>15.7</strong> reflect</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
