--- a/pages/docs.html
+++ b/pages/docs.html
@@ -85,9 +85,10 @@
       <a id="stdlib-debug" class="sub-topic"><strong>15.3</strong> debug</a> <br>
         <a id="stdlib-debug-assert" class="sub-sub-topic"><strong>15.3.1</strong> assert</a> <br>
       <a id="stdlib-io" class="sub-topic"><strong>15.4</strong> io</a> <br>
-      <a id="stdlib-mem" class="sub-topic"><strong>15.5</strong> mem</a> <br>
-      <a id="stdlib-os" class="sub-topic"><strong>15.6</strong> os</a> <br>
-      <a id="stdlib-reflect" class="sub-topic"><strong>15.7</strong> reflect</a> <br>
+      <a id="stdlib-math" class="sub-topic"><strong>15.5</strong> math</a> <br>
+      <a id="stdlib-mem" class="sub-topic"><strong>15.6</strong> mem</a> <br>
+      <a id="stdlib-os" class="sub-topic"><strong>15.7</strong> os</a> <br>
+      <a id="stdlib-reflect" class="sub-topic"><strong>15.8</strong> reflect</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
