--- a/index.html
+++ b/index.html
@@ -41,56 +41,30 @@ license that can be found in the LICENSE file.
   </a>
   <div class="navigate-shadow"></div>
   <div class="navigate-large-shadow"></div>
-  <div class="line-section last" style="padding-top: 200px;">
-    <div style="margin: auto; display: flex;">
-      <div style="margin-right: 40px; font-family: 'OpenSans'; font-size: 20px;">
-        <div class="sub-title" style="margin-bottom: 30px;">Cxx and More</div>
-          <div class="text">
-            The X source code <strong>transpiles to human readable Cxx</strong> code.
-            A familiar environment for Cxx developers, a comfortable start for new developers.
-          </div>
-      </div>
-      <div style="margin-right: 40px;">
-        <div class="sub-title" style="margin-bottom: 30px;">Trust and Compliance</div>
-        <div class="text">
-          The generated Cxx code is code that works everywhere and is compatible with all Cxx stuff.
-          <strong>Develop Cxx in a simpler and more readable way.</strong>
-        </div>
-      </div>
-      <div>
-        <div class="sub-title" style="margin-bottom: 30px;">Simplicity</div>
-        <div class="text">
-          More modern, readable and comfortable than Cxx syntax.
-          <strong>Simple and maintainable code</strong>, simplicity and functionality.
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="section" style="
   margin-left: auto;
   margin-right: auto;
-  margin-top: 500px;
+  margin-top: 300px;
   background: transparent;
   width: 700px;
   color: white;
   border-style: nıne;">
     <div style="padding: 50px;">
       <div>
-        <img src="resources/file_pretty_transpile.png" width="256" height="256" style="margin-right: 50px; margin-top: 50px;">
+        <img src="resources/file_perfect.png" width="256" height="256" style="margin-right: 50px; margin-top: 50px;">
       </div>
     </div>
-    <div id="pretty-transpile-content" style="margin-bottom: 20px;">
-      <div id="pretty-transpile-title" class="title" style="text-align: unset;">Pretty Transpile</div>
+    <div id="friendly-content" style="margin-top: 60px; margin-bottom: 20px;">
+      <div id="friendly-title" class="title" style="text-align: unset;">Friendly</div>
       <br>
-      X produces Cxx code that's great, readable, and pretty neat.
-      You don't need to waste time editing the transpiled code.
+      X is developer friendly!
+      
       <br><br>
       <ul>
-        <li>Adds information about the transpilation</li>
-        <li>Human readable</li>
-        <li>Splits the code into regions</li>
-        <li>Groups codes by rearranging them</li>
-        <li>Single output file</li>
+        <li>Readable</li>
+        <li>Modern</li>
+        <li>Simple</li>
+        <li>Maintainable</li>
       </ul>
     </div>
   </div>
@@ -103,8 +77,8 @@ license that can be found in the LICENSE file.
   color: white;
   border-style: none;">
     <div style="padding: 50px;">
-    <div id="pretty-transpile-title" class="title" style="text-align: unset;">Documenter</div>
-    <div id="pretty-transpile-content" style="margin-bottom: 20px;">
+    <div id="documenter-title" class="title" style="text-align: unset;">Documenter</div>
+    <div id="documenter-content" style="margin-bottom: 20px;">
       <br>
       The X compiler has a documenter internally.
       It makes clear documentation for your code.
