--- a/pages/docs.html
+++ b/pages/docs.html
@@ -27,7 +27,7 @@
       <a id="project-defines" class="sub-topic"><strong>3.4.</strong> Defines</a> <br>
     <a id="basics" class="topic"><strong>4.</strong> Basics</a> <br>
       <a id="basics-comments" class="sub-topic"><strong>4.1.</strong> Comments</a> <br>
-      <a id="basics-entry-point" class="sub-topic"><strong>4.2.</strong> Entry Point</a> <br>
+      <a id="basics-reserved-functions" class="sub-topic"><strong>4.2.</strong> Reserved Functions</a> <br>
       <a id="basics-data-types" class="sub-topic"><strong>4.3.</strong> Data Types</a> <br>
       <a id="basics-operators" class="sub-topic"><strong>4.4.</strong> Operators</a> <br>
       <a id="basics-attributes" class="sub-topic"><strong>4.5.</strong> Attributes</a> <br>
@@ -80,15 +80,6 @@
     <a id="preprocessor" class="topic"><strong>14.</strong> Preprocessor</a> <br>
       <a id="preprocessor-directives" class="sub-topic"><strong>14.1</strong> Directives</a> <br>
     <a id="stdlib" class="topic"><strong>15.</strong> Standard Library</a> <br>
-      <a id="stdlib-builtin" class="sub-topic"><strong>15.1</strong> Built-In</a> <br>
-      <a id="stdlib-array" class="sub-topic"><strong>15.2</strong> array</a> <br>
-      <a id="stdlib-debug" class="sub-topic"><strong>15.3</strong> debug</a> <br>
-        <a id="stdlib-debug-assert" class="sub-sub-topic"><strong>15.3.1</strong> assert</a> <br>
-      <a id="stdlib-io" class="sub-topic"><strong>15.4</strong> io</a> <br>
-      <a id="stdlib-math" class="sub-topic"><strong>15.5</strong> math</a> <br>
-      <a id="stdlib-mem" class="sub-topic"><strong>15.6</strong> mem</a> <br>
-      <a id="stdlib-os" class="sub-topic"><strong>15.7</strong> os</a> <br>
-      <a id="stdlib-reflect" class="sub-topic"><strong>15.8</strong> reflect</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
@@ -99,5 +90,7 @@
 <!-- Scripts. -->
 <script src="../javascript/init.js" type="text/javascript"></script>
 <script src="../javascript/copyright.js" type="text/javascript"></script>
-<script src="../javascript/pages/docs.js"></script>
+<script src="../javascript/searchbox.js" type="text/javascript"></script>
+<script src="../javascript/sidenav_page.js" type="text/javascript"></script>
+<script src="../javascript/pages/docs.js" type="text/javascript"></script>
 </html>
