--- a/pages/docs.html
+++ b/pages/docs.html
@@ -36,10 +36,11 @@
       <a id="common-concepts-variables" class="sub-topic"><strong>5.1.</strong> Variables</a> <br>
       <a id="common-concepts-functions" class="sub-topic"><strong>5.2.</strong> Functions</a> <br>
       <a id="common-concepts-arrays" class="sub-topic"><strong>5.3.</strong> Arrays</a> <br>
-      <a id="common-concepts-maps" class="sub-topic"><strong>5.4.</strong> Maps</a> <br>
-      <a id="common-concepts-control-flow" class="sub-topic"><strong>5.5.</strong> Control Flow</a> <br>
-      <a id="common-concepts-enums" class="sub-topic"><strong>5.6.</strong> Enums</a> <br>
-      <a id="common-concepts-structures" class="sub-topic"><strong>5.7.</strong> Structures</a> <br>
+      <a id="common-concepts-slices" class="sub-topic"><strong>5.4.</strong> Slices</a> <br>
+      <a id="common-concepts-maps" class="sub-topic"><strong>5.5.</strong> Maps</a> <br>
+      <a id="common-concepts-control-flow" class="sub-topic"><strong>5.6.</strong> Control Flow</a> <br>
+      <a id="common-concepts-enums" class="sub-topic"><strong>5.7.</strong> Enums</a> <br>
+      <a id="common-concepts-structures" class="sub-topic"><strong>5.8.</strong> Structures</a> <br>
     <a id="memory" class="topic"><strong>6.</strong> Memory</a> <br>
       <a id="memory-pointers" class="sub-topic"><strong>6.1.</strong> Pointers</a> <br>
       <a id="memory-memory-management" class="sub-topic"><strong>6.2.</strong> Memory Management</a> <br>
@@ -54,7 +55,8 @@
       <a id="types-generics" class="sub-topic"><strong>8.3.</strong> Generics</a> <br>
       <a id="types-str" class="sub-topic"><strong>8.4.</strong> str</a> <br>
       <a id="types-arrays" class="sub-topic"><strong>8.5.</strong> Arrays</a> <br>
-      <a id="types-maps" class="sub-topic"><strong>8.6.</strong> Maps</a> <br>
+      <a id="types-slices" class="sub-topic"><strong>8.6.</strong> Slices</a> <br>
+      <a id="types-maps" class="sub-topic"><strong>8.7.</strong> Maps</a> <br>
     <a id="type-statics" class="topic"><strong>9.</strong> Type Statics</a> <br>
       <a id="type-statics-i8" class="sub-topic"><strong>9.1.</strong> i8</a> <br>
       <a id="type-statics-i16" class="sub-topic"><strong>9.2.</strong> i16</a> <br>
