--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ license that can be found in the LICENSE file.
       The X Programming Language
     </div>
     <div style="color: rebeccablue; margin-top: 10px; font-size: 25px;">
-    X is the <x style="font-family: 'OpenSans-Bold'; font-weight: bold;">simplified, efficient, strongly typed<br> and compiled</x> system programming language
+    X is the simplified, efficient, statically typed<br> and compiled</x> system programming language
     <div class="marked-ul" style="margin-top: 20px;">
       <li><desc>X is an open source and free programming language</desc></li>
       <li><desc>Easy to learn and get started with</desc></li>
