--- a/pages/docs.html
+++ b/pages/docs.html
@@ -41,47 +41,49 @@
       <a id="common-concepts-control-flow" class="sub-topic"><strong>5.6.</strong> Control Flow</a> <br>
       <a id="common-concepts-enums" class="sub-topic"><strong>5.7.</strong> Enums</a> <br>
       <a id="common-concepts-structures" class="sub-topic"><strong>5.8.</strong> Structures</a> <br>
-    <a id="memory" class="topic"><strong>6.</strong> Memory</a> <br>
-      <a id="memory-pointers" class="sub-topic"><strong>6.1.</strong> Pointers</a> <br>
-      <a id="memory-memory-management" class="sub-topic"><strong>6.2.</strong> Memory Management</a> <br>
-      <a id="memory-references" class="sub-topic"><strong>6.3.</strong> References</a> <br>
-    <a id="error-handling" class="topic"><strong>7.</strong> Error Handling</a> <br>
-      <a id="error-handling-error-structure" class="sub-topic"><strong>7.1.</strong> Error Structure</a> <br>
-      <a id="error-handling-panics" class="sub-topic"><strong>7.2.</strong> Panics</a> <br>
-      <a id="error-handling-handling-panics" class="sub-topic"><strong>7.3.</strong> Handling Panics</a> <br>
-    <a id="types" class="topic"><strong>8.</strong> Types</a> <br>
-      <a id="types-aliasing" class="sub-topic"><strong>8.1.</strong> Aliasing</a> <br>
-      <a id="types-casting" class="sub-topic"><strong>8.2.</strong> Casting</a> <br>
-      <a id="types-generics" class="sub-topic"><strong>8.3.</strong> Generics</a> <br>
-      <a id="types-str" class="sub-topic"><strong>8.4.</strong> str</a> <br>
-      <a id="types-arrays" class="sub-topic"><strong>8.5.</strong> Arrays</a> <br>
-      <a id="types-slices" class="sub-topic"><strong>8.6.</strong> Slices</a> <br>
-      <a id="types-maps" class="sub-topic"><strong>8.7.</strong> Maps</a> <br>
-    <a id="type-statics" class="topic"><strong>9.</strong> Type Statics</a> <br>
-      <a id="type-statics-i8" class="sub-topic"><strong>9.1.</strong> i8</a> <br>
-      <a id="type-statics-i16" class="sub-topic"><strong>9.2.</strong> i16</a> <br>
-      <a id="type-statics-i32" class="sub-topic"><strong>9.3.</strong> i32</a> <br>
-      <a id="type-statics-i64" class="sub-topic"><strong>9.4.</strong> i64</a> <br>
-      <a id="type-statics-u8" class="sub-topic"><strong>9.5.</strong> u8</a> <br>
-      <a id="type-statics-u16" class="sub-topic"><strong>9.6.</strong> u16</a> <br>
-      <a id="type-statics-u32" class="sub-topic"><strong>9.7.</strong> u32</a> <br>
-      <a id="type-statics-u64" class="sub-topic"><strong>9.8.</strong> u64</a> <br>
-      <a id="type-statics-f32" class="sub-topic"><strong>9.9.</strong> f32</a> <br>
-      <a id="type-statics-f64" class="sub-topic"><strong>9.10.</strong> f64</a> <br>
-      <a id="type-statics-int" class="sub-topic"><strong>9.11.</strong> int</a> <br>
-      <a id="type-statics-uint" class="sub-topic"><strong>9.12.</strong> uint</a> <br>
-      <a id="type-statics-str" class="sub-topic"><strong>9.13.</strong> str</a> <br>
-    <a id="namespaces" class="topic"><strong>10.</strong> Namespaces</a> <br>
-    <a id="cxx" class="topic"><strong>11.</strong> Cxx</a> <br>
-      <a id="cxx-cxx-embedding" class="sub-topic"><strong>11.1.</strong> Cxx Embedding</a> <br>
-      <a id="cxx-cxxapi" class="sub-topic"><strong>11.2.</strong> CxxAPI</a> <br>
-    <a id="documenting" class="topic"><strong>12.</strong> Documenting</a> <br>
-      <a id="documenting-documentation-comments" class="sub-topic"><strong>12.1</strong> Documentation Comments</a> <br>
-      <a id="documenting-using-documenter" class="sub-topic"><strong>12.2</strong> Using Documenter</a> <br>
-    <a id="use-declarations" class="topic"><strong>13.</strong> Use Declarations</a> <br>
-    <a id="preprocessor" class="topic"><strong>14.</strong> Preprocessor</a> <br>
-      <a id="preprocessor-directives" class="sub-topic"><strong>14.1</strong> Directives</a> <br>
-    <a id="stdlib" class="topic"><strong>15.</strong> Standard Library</a> <br>
+    <a id="traits" class="topic"><strong>6.</strong> Traits</a> <br>
+      <a id="traits-implementing" class="sub-topic"><strong>6.</strong> Implementing</a> <br>
+    <a id="memory" class="topic"><strong>7.</strong> Memory</a> <br>
+      <a id="memory-pointers" class="sub-topic"><strong>7.1.</strong> Pointers</a> <br>
+      <a id="memory-memory-management" class="sub-topic"><strong>7.2.</strong> Memory Management</a> <br>
+      <a id="memory-references" class="sub-topic"><strong>7.3.</strong> References</a> <br>
+    <a id="error-handling" class="topic"><strong>8.</strong> Error Handling</a> <br>
+      <a id="error-handling-error-structure" class="sub-topic"><strong>8.1.</strong> Error Structure</a> <br>
+      <a id="error-handling-panics" class="sub-topic"><strong>8.2.</strong> Panics</a> <br>
+      <a id="error-handling-handling-panics" class="sub-topic"><strong>8.3.</strong> Handling Panics</a> <br>
+    <a id="types" class="topic"><strong>9.</strong> Types</a> <br>
+      <a id="types-aliasing" class="sub-topic"><strong>9.1.</strong> Aliasing</a> <br>
+      <a id="types-casting" class="sub-topic"><strong>9.2.</strong> Casting</a> <br>
+      <a id="types-generics" class="sub-topic"><strong>9.3.</strong> Generics</a> <br>
+      <a id="types-str" class="sub-topic"><strong>9.4.</strong> str</a> <br>
+      <a id="types-arrays" class="sub-topic"><strong>9.5.</strong> Arrays</a> <br>
+      <a id="types-slices" class="sub-topic"><strong>9.6.</strong> Slices</a> <br>
+      <a id="types-maps" class="sub-topic"><strong>9.7.</strong> Maps</a> <br>
+    <a id="type-statics" class="topic"><strong>10.</strong> Type Statics</a> <br>
+      <a id="type-statics-i8" class="sub-topic"><strong>10.1.</strong> i8</a> <br>
+      <a id="type-statics-i16" class="sub-topic"><strong>10.2.</strong> i16</a> <br>
+      <a id="type-statics-i32" class="sub-topic"><strong>10.3.</strong> i32</a> <br>
+      <a id="type-statics-i64" class="sub-topic"><strong>10.4.</strong> i64</a> <br>
+      <a id="type-statics-u8" class="sub-topic"><strong>10.5.</strong> u8</a> <br>
+      <a id="type-statics-u16" class="sub-topic"><strong>10.6.</strong> u16</a> <br>
+      <a id="type-statics-u32" class="sub-topic"><strong>10.7.</strong> u32</a> <br>
+      <a id="type-statics-u64" class="sub-topic"><strong>10.8.</strong> u64</a> <br>
+      <a id="type-statics-f32" class="sub-topic"><strong>10.9.</strong> f32</a> <br>
+      <a id="type-statics-f64" class="sub-topic"><strong>10.10.</strong> f64</a> <br>
+      <a id="type-statics-int" class="sub-topic"><strong>10.11.</strong> int</a> <br>
+      <a id="type-statics-uint" class="sub-topic"><strong>10.12.</strong> uint</a> <br>
+      <a id="type-statics-str" class="sub-topic"><strong>10.13.</strong> str</a> <br>
+    <a id="namespaces" class="topic"><strong>11.</strong> Namespaces</a> <br>
+    <a id="cxx" class="topic"><strong>12.</strong> Cxx</a> <br>
+      <a id="cxx-cxx-embedding" class="sub-topic"><strong>12.1.</strong> Cxx Embedding</a> <br>
+      <a id="cxx-cxxapi" class="sub-topic"><strong>12.2.</strong> CxxAPI</a> <br>
+    <a id="documenting" class="topic"><strong>13.</strong> Documenting</a> <br>
+      <a id="documenting-documentation-comments" class="sub-topic"><strong>13.1</strong> Documentation Comments</a> <br>
+      <a id="documenting-using-documenter" class="sub-topic"><strong>13.2</strong> Using Documenter</a> <br>
+    <a id="use-declarations" class="topic"><strong>14.</strong> Use Declarations</a> <br>
+    <a id="preprocessor" class="topic"><strong>15.</strong> Preprocessor</a> <br>
+      <a id="preprocessor-directives" class="sub-topic"><strong>15.1</strong> Directives</a> <br>
+    <a id="stdlib" class="topic"><strong>16.</strong> Standard Library</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
