--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ license that can be found in the LICENSE file.
         <div class="dropdown-content">
           <a id="preview-code-helloworld">Hello World</a>
           <a id="preview-code-fibonacci-closure">Fibonacci Closure</a>
-          <a id="preview-code-pointers">Pointers</a>
+          <a id="preview-code-traits">Traits</a>
         </div>
       </div>
     </div>
