--- a/pages/stdlib/builtin.html
+++ b/pages/stdlib/builtin.html
@@ -13,7 +13,7 @@
   <div id="side-navigation" style="margin-top: 60px; height: calc(100% - 100px);">
     <a id="type-aliases" class="topic"><strong></strong> Type Aliases</a> <br>
     <a id="functions" class="topic"><strong></strong> Functions</a> <br>
-    <a id="structures" class="topic"><strong></strong> Structures</a>
+    <a id="traits" class="topic"><strong></strong> Traits</a>
   </div>
   <div id="side-navigation-content">
     <div id="side-navigation-content-body"></div>
