--- a/pages/docs.html
+++ b/pages/docs.html
@@ -48,7 +48,7 @@
       <a id="memory-memory-management" class="sub-topic"><strong>7.2.</strong> Memory Management</a> <br>
       <a id="memory-references" class="sub-topic"><strong>7.3.</strong> References</a> <br>
     <a id="error-handling" class="topic"><strong>8.</strong> Error Handling</a> <br>
-      <a id="error-handling-error-structure" class="sub-topic"><strong>8.1.</strong> Error Structure</a> <br>
+      <a id="error-handling-error-trait" class="sub-topic"><strong>8.1.</strong> Error Trait</a> <br>
       <a id="error-handling-panics" class="sub-topic"><strong>8.2.</strong> Panics</a> <br>
       <a id="error-handling-handling-panics" class="sub-topic"><strong>8.3.</strong> Handling Panics</a> <br>
     <a id="types" class="topic"><strong>9.</strong> Types</a> <br>
@@ -73,17 +73,16 @@
       <a id="type-statics-int" class="sub-topic"><strong>10.11.</strong> int</a> <br>
       <a id="type-statics-uint" class="sub-topic"><strong>10.12.</strong> uint</a> <br>
       <a id="type-statics-str" class="sub-topic"><strong>10.13.</strong> str</a> <br>
-    <a id="namespaces" class="topic"><strong>11.</strong> Namespaces</a> <br>
-    <a id="cxx" class="topic"><strong>12.</strong> Cxx</a> <br>
-      <a id="cxx-cxx-embedding" class="sub-topic"><strong>12.1.</strong> Cxx Embedding</a> <br>
-      <a id="cxx-cxxapi" class="sub-topic"><strong>12.2.</strong> CxxAPI</a> <br>
-    <a id="documenting" class="topic"><strong>13.</strong> Documenting</a> <br>
-      <a id="documenting-documentation-comments" class="sub-topic"><strong>13.1</strong> Documentation Comments</a> <br>
-      <a id="documenting-using-documenter" class="sub-topic"><strong>13.2</strong> Using Documenter</a> <br>
-    <a id="use-declarations" class="topic"><strong>14.</strong> Use Declarations</a> <br>
-    <a id="preprocessor" class="topic"><strong>15.</strong> Preprocessor</a> <br>
-      <a id="preprocessor-directives" class="sub-topic"><strong>15.1</strong> Directives</a> <br>
-    <a id="stdlib" class="topic"><strong>16.</strong> Standard Library</a> <br>
+    <a id="cxx" class="topic"><strong>11.</strong> Cxx</a> <br>
+      <a id="cxx-cxx-embedding" class="sub-topic"><strong>11.1.</strong> Cxx Embedding</a> <br>
+      <a id="cxx-cxxapi" class="sub-topic"><strong>11.2.</strong> CxxAPI</a> <br>
+    <a id="documenting" class="topic"><strong>12.</strong> Documenting</a> <br>
+      <a id="documenting-documentation-comments" class="sub-topic"><strong>12.1</strong> Documentation Comments</a> <br>
+      <a id="documenting-using-documenter" class="sub-topic"><strong>12.2</strong> Using Documenter</a> <br>
+    <a id="use-declarations" class="topic"><strong>13.</strong> Use Declarations</a> <br>
+    <a id="preprocessor" class="topic"><strong>14.</strong> Preprocessor</a> <br>
+      <a id="preprocessor-directives" class="sub-topic"><strong>14.1</strong> Directives</a> <br>
+    <a id="stdlib" class="topic"><strong>15.</strong> Standard Library</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
