--- a/pages/stdlib/errors.html
+++ b/pages/stdlib/errors.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="../../styles/pages/docs.css" rel="stylesheet" type="text/css">
-  <title>X - stdlib: mem</title>
+  <title>X - stdlib: errors</title>
 </head>
 <body>
 <!-- Navigation bar. -->
@@ -23,5 +23,5 @@
 <script src="../../javascript/copyright.js" type="text/javascript"></script>
 <script src="../../javascript/searchbox.js" type="text/javascript"></script>
 <script src="../../javascript/sidenav_page.js" type="text/javascript"></script>
-<script src="../../javascript/pages/stdlib/mem.js" type="text/javascript"></script>
+<script src="../../javascript/pages/stdlib/errors.js" type="text/javascript"></script>
 </html>
