--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ license that can be found in the LICENSE file.
     <div class="marked-ul" style="margin-top: 20px;">
       <li><desc>X is an open source and free programming language</desc></li>
       <li><desc>Easy to learn and get started with</desc></li>
-      <li><desc>Efficient and fast as Cxx</desc></li>
-      <li><desc>High interoperability with Cxx</desc></li>
+      <li><desc>Efficient and fast as C++</desc></li>
+      <li><desc>High interoperability with C++</desc></li>
     </div>
     </div>
   </div>
@@ -104,7 +104,7 @@ license that can be found in the LICENSE file.
         <button class="dropbutton" style="min-width: 250px;"><x id="preview-dropdown-text">Select Algorithm</x> <div class="arrow down" style="float: right;"></div></button>
         <div class="dropdown-content">
           <a id="preview-code-helloworld">Hello World</a>
-          <a id="preview-code-fibonacci-closure">Fibonacci Closure</a>
+          <a id="preview-code-quicksort">Quick Sort</a>
           <a id="preview-code-traits">Traits</a>
         </div>
       </div>
