--- a/pages/stdlib/unsafe.html
+++ b/pages/stdlib/unsafe.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="../../styles/pages/docs.css" rel="stylesheet" type="text/css">
-  <title>X - stdlib: slice</title>
+  <title>X - stdlib: builtin</title>
 </head>
 <body>
 <!-- Navigation bar. -->
@@ -12,6 +12,8 @@
 <div id="body-div">
   <div id="side-navigation" style="margin-top: 60px; height: calc(100% - 100px);">
     <a id="functions" class="topic"><strong></strong> Functions</a> <br>
+    <a id="traits" class="topic"><strong></strong> Traits</a> <br>
+    <a id="structs" class="topic"><strong></strong> Structs</a> <br>
   </div>
   <div id="side-navigation-content">
     <div id="side-navigation-content-body"></div>
@@ -23,5 +25,5 @@
 <script src="../../javascript/copyright.js" type="text/javascript"></script>
 <script src="../../javascript/searchbox.js" type="text/javascript"></script>
 <script src="../../javascript/sidenav_page.js" type="text/javascript"></script>
-<script src="../../javascript/pages/stdlib/slice.js" type="text/javascript"></script>
+<script src="../../javascript/pages/stdlib/unsafe.js" type="text/javascript"></script>
 </html>
