--- a/pages/docs.html
+++ b/pages/docs.html
@@ -72,9 +72,9 @@
       <a id="type-statics-f64" class="sub-topic"><strong>10.10.</strong> f64</a> <br>
       <a id="type-statics-int" class="sub-topic"><strong>10.11.</strong> int</a> <br>
       <a id="type-statics-uint" class="sub-topic"><strong>10.12.</strong> uint</a> <br>
-    <a id="cxx" class="topic"><strong>11.</strong> Cxx</a> <br>
-      <a id="cxx-cxx-embedding" class="sub-topic"><strong>11.1.</strong> Cxx Embedding</a> <br>
-      <a id="cxx-cxxapi" class="sub-topic"><strong>11.2.</strong> CxxAPI</a> <br>
+    <a id="cpp" class="topic"><strong>11.</strong> Cpp</a> <br>
+    <a id="cpp-api" class="sub-topic"><strong>11.1.</strong> API</a> <br>
+      <a id="cpp-interoperability" class="sub-topic"><strong>11.2.</strong> Interoperability</a> <br>
     <a id="documenting" class="topic"><strong>12.</strong> Documenting</a> <br>
       <a id="documenting-documentation-comments" class="sub-topic"><strong>12.1</strong> Documentation Comments</a> <br>
       <a id="documenting-using-documenter" class="sub-topic"><strong>12.2</strong> Using Documenter</a> <br>
