Add: meta description

--- a/pages/code_of_conduct.html
+++ b/pages/code_of_conduct.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>X - Code of Conduct</title>
+  <meta name="description" content="The official code of conduct of the X programming language.">
 </head>
 <body>
 <!-- Navigation bar. -->
