--- a/pages/contributing.html
+++ b/pages/contributing.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>X - Contributing</title>
+  <meta name="description" content="The official contributing guideline of the X programming language.">
   <style>
     a {
       color: blueviolet;
