--- a/pages/docs.html
+++ b/pages/docs.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="The official documentations of the X programming language.
+  This documentations updates with XXC.">
   <link href="../styles/pages/docs.css" rel="stylesheet" type="text/css">
 </head>
 <body>
