--- a/pages/license.html
+++ b/pages/license.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>X - License</title>
+  <meta name="description" content="The official license of the X programming language.">
 </head>
 <body>
 <!-- Navigation bar. -->
