--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ license that can be found in the LICENSE file.
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="The official website of the X programming language.">
   <link href="./styles/pages/index.css" rel="stylesheet" type="text/css">
   <title>The X Programming Language</title>
 </head>
