--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2022 The X Programming Language.
+Copyright 2022 The Jule Programming Language.
 Use of this source code is governed by a BSD 3-Clause
 license that can be found in the LICENSE file.
 -->
@@ -8,9 +8,9 @@ license that can be found in the LICENSE file.
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="The official website of the X programming language.">
+  <meta name="description" content="The official website of the Jule programming language.">
   <link href="./styles/pages/index.css" rel="stylesheet" type="text/css">
-  <title>The X Programming Language</title>
+  <title>The Jule Programming Language</title>
 </head>
 <body>
 <!-- Navigation bar. -->
@@ -20,82 +20,18 @@ license that can be found in the LICENSE file.
   <div id="startup-panel">
   <div id="startup-panel-content" class="startup-panel-content">
     <div style="font-size: 40px; font-family: 'OpenSans-Bold'; font-weight: bold;">
-      The X Programming Language
+      The <x style="color: #FFBB00">Jule</x> Programming Language
     </div>
     <div style="color: rebeccablue; margin-top: 10px; font-size: 25px;">
-    X is the simplified, efficient, statically typed<br> and compiled</x> system programming language
+    Jule is the simplified, efficient, statically typed<br> and compiled</x> system programming language
     <div class="marked-ul" style="margin-top: 20px;">
-      <li><desc>X is an open source and free programming language</desc></li>
+      <li><desc>Jule is an open source and free programming language</desc></li>
       <li><desc>Easy to learn and get started with</desc></li>
       <li><desc>Efficient and fast as C++</desc></li>
       <li><desc>High interoperability with C++</desc></li>
     </div>
     </div>
   </div>
-  </div>
-  <img id="navigate-logo" src="https://raw.githubusercontent.com/the-xlang/resources/main/x.svg?sanitize=true">
-  <a href="https://github.com/the-xlang/xxc/releases">
-  <div id="navigate-download" class="navigate-link left">DOWNLOAD</div>
-  </a>
-  <a href="./pages/docs.html">
-  <div id="navigate-documentations" class="navigate-link right">LEARNING</div>
-  </a>
-  <div class="navigate-shadow"></div>
-  <div class="navigate-large-shadow"></div>
-  <div class="section" style="
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 300px;
-  background: transparent;
-  width: 700px;
-  color: white;
-  border-style: nıne;">
-    <div style="padding: 50px;">
-      <div>
-        <img src="resources/file_perfect.png" width="256" height="256" style="margin-right: 50px; margin-top: 50px;">
-      </div>
-    </div>
-    <div id="friendly-content" style="margin-top: 60px; margin-bottom: 20px;">
-      <div id="friendly-title" class="title" style="text-align: unset;">Friendly</div>
-      <br>
-      X is developer friendly!
-      
-      <br><br>
-      <ul>
-        <li>Readable</li>
-        <li>Modern</li>
-        <li>Simple</li>
-        <li>Maintainable</li>
-      </ul>
-    </div>
-  </div>
-  <div class="section" style="
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 150px;
-  background: transparent;
-  width: 700px;
-  color: white;
-  border-style: none;">
-    <div style="padding: 50px;">
-    <div id="documenter-title" class="title" style="text-align: unset;">Documenter</div>
-    <div id="documenter-content" style="margin-bottom: 20px;">
-      <br>
-      The X compiler has a documenter internally.
-      It makes clear documentation for your code.
-      <br><br>
-      <ul>
-        <li>JSON format</li>
-        <li>Human readable</li>
-        <li>Defines only</li>
-        <li>Single output file per file</li>
-        <li>Easy to process</li>
-      </ul>
-    </div>
-    </div>
-    <div>
-      <img src="resources/file_json.png" width="256" height="256" style="margin-left: 50px; margin-top: 100px;">
-    </div>
   </div>
   <div style="margin-top: 200px;"></div>
   <div style="margin-top: 100px; margin-left: auto; margin-right: auto;">
@@ -115,11 +51,11 @@ license that can be found in the LICENSE file.
   <div class="title">Get Started</div>
   <div class="link-card-section" style="padding: 50px;">
   <center>
-  <a href="https://github.com/the-xlang/xxc/releases" class="link-card">
+  <a href="https://github.com/jule-lang/jule/releases" class="link-card">
   <img class="getstarted-linkcard-image" src="./resources/download.png">
   <div class="link-card-body">
     <div class="sub-sub-title">Download</div>
-    Install X Compiler
+    Install JuleC
     <div class="arrow right"></div>
   </div></a>
   <a href="./pages/docs.html" class="link-card">
