--- a/pages/code_of_conduct.html
+++ b/pages/code_of_conduct.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>X - Code of Conduct</title>
-  <meta name="description" content="The official code of conduct of the X programming language.">
+  <title>Jule - Code of Conduct</title>
+  <meta name="description" content="The official code of conduct of the Jule programming language.">
 </head>
 <body>
 <!-- Navigation bar. -->
