--- a/pages/docs.html
+++ b/pages/docs.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="The official documentations of the X programming language.
-  This documentations updates with XXC.">
+  <meta name="description" content="The official documentations of the Jule programming language.
+  This documentations updates with JuleC.">
   <link href="../styles/pages/docs.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 <!-- Body Div. -->
 <div id="body-div">
   <div id="side-navigation" style="margin-top: 60px; height: calc(100% - 100px);">
-    <a id="the-xlang" class="topic"><strong></strong> The X Programming Language</a> <br>
+    <a id="jule-lang" class="topic"><strong></strong> The Jule Programming Language</a> <br>
     <a id="foreword" class="topic"><strong></strong> Foreword</a> <br>
     <a id="introduction" class="topic"><strong></strong> Introduction</a> <br>
     <a id="getting-started" class="topic"><strong>1.</strong> Getting Started</a> <br>
