--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>X - Search</title>
+  <title>Jule - Search</title>
 </head>
 <body>
 <!-- Navigation bar. -->
