--- a/pages/community.html
+++ b/pages/community.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>X - Community</title>
+  <title>Jule - Community</title>
   <meta charset="UTF-8">
 </head>
 <body>
@@ -12,7 +12,7 @@
   <div class="title" style="margin-top: 100px;">Community</div>
   <div class="link-card-section" style="margin-top: 100px; margin-left: 10%; margin-right: 10%;">
   <center>
-    <a href="https://github.com/the-xlang/xxc/issues/new/choose" class="link-card">
+    <a href="https://github.com/jule-lang/jule/issues/new/choose" class="link-card">
     <img
       class="getstarted-linkcard-image"
       src="../resources/github.png"
