--- a/pages/license.html
+++ b/pages/license.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>X - License</title>
-  <meta name="description" content="The official license of the X programming language.">
+  <title>Jule - License</title>
+  <meta name="description" content="The official license of the Jule programming language.">
 </head>
 <body>
 <!-- Navigation bar. -->
