--- a/pages/stdlib/slice.html
+++ b/pages/stdlib/slice.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="../../styles/pages/docs.css" rel="stylesheet" type="text/css">
-  <title>X - std::slice</title>
+  <title>Jule - std::slice</title>
 </head>
 <body>
 <!-- Navigation bar. -->
