--- a/pages/community.html
+++ b/pages/community.html
@@ -23,7 +23,7 @@
     <div class="link-card-body" style="display: inline-flex; margin-top: 100px;">
       <div class="sub-sub-title">GitHub</div>
     </div></a>
-    <a href="https://stackoverflow.com/questions/tagged/x" class="link-card">
+    <a href="https://stackoverflow.com/questions/tagged/jule+julec" class="link-card">
     <img
       class="getstarted-linkcard-image"
       src="../resources/stackoverflow.png"
