--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ license that can be found in the LICENSE file.
 <!-- Navigation bar. -->
 <div id="navigation" class="navigation"></div>
 <div class="body-div">
-  <div class="neuralcanvas"></div>
+  <div class="neuralcanvas" style="background-color: black;"></div>
   <div id="startup-panel">
   <div id="startup-panel-content" class="startup-panel-content">
     <div style="font-size: 40px; font-family: 'OpenSans-Bold'; font-weight: bold;">
-      The <x style="color: #FFBB00">Jule</x> Programming Language
+      The <x style="color: #5F7389">Jule</x> Programming Language
     </div>
     <div style="color: rebeccablue; margin-top: 10px; font-size: 25px;">
     Jule is the simplified, efficient, statically typed<br> and compiled</x> system programming language
