--- a/pages/contributing.html
+++ b/pages/contributing.html
@@ -5,12 +5,12 @@
   <meta name="description" content="The official contributing guideline of the Jule programming language.">
   <style>
     a .inline_code {
-      color: #dfba55;
+      color: rgb(124, 149, 173);
       border: none;
       background: transparent;
     }
     a .inline_code:hover {
-      color: #FFBB00;
+      color: #9dbde2;
     }
   </style>
 </head>
