--- a/pages/stdlib/mem.html
+++ b/pages/stdlib/mem.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="../../styles/pages/docs.css" rel="stylesheet" type="text/css">
+  <link href="../../styles/pages/stdlib.css" rel="stylesheet" type="text/css">
   <title>Jule - std::mem</title>
 </head>
 <body>
