Add: discord server to community

--- a/pages/community.html
+++ b/pages/community.html
@@ -16,23 +16,36 @@
     <img
       class="getstarted-linkcard-image"
       src="../resources/github.png"
-      width="150"
-      height="150"
+      width="100"
+      height="110"
       style="margin-top: 20px;">
     <br>
     <div class="link-card-body" style="display: inline-flex; margin-top: 100px;">
       <div class="sub-sub-title">GitHub</div>
     </div></a>
+
     <a href="https://stackoverflow.com/questions/tagged/jule+julec" class="link-card">
     <img
       class="getstarted-linkcard-image"
       src="../resources/stackoverflow.png"
-      width="150"
-      height="150"
+      width="100"
+      height="110"
       style="margin-top: 20px;">
     <br>
     <div class="link-card-body" style="display: inline-flex; margin-top: 100px;">
       <div class="sub-sub-title">StackOverflow</div>
+    </div></a>
+
+    <a href="https://discord.gg/Z6caSvTQeD" class="link-card">
+    <img
+      class="getstarted-linkcard-image"
+      src="../resources/discord.png"
+      width="100"
+      height="110"
+      style="margin-top: 20px;">
+    <br>
+    <div class="link-card-body" style="display: inline-flex; margin-top: 100px;">
+      <div class="sub-sub-title">Official Discord Server</div>
     </div></a>
   </center>
   </div>
