--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@ license that can be found in the LICENSE file.
       <li><desc>High interoperability with C++</desc></li>
     </div>
     </div>
+    <div style="margin-top: 50px">
+      <a href="pages/docs.html"><button id="index-learn-button">Learn</button></a>
+      <a href="https://github.com/jule-lang/jule/releases"><button id="index-download-button">Download</button></a>
+    </div>
   </div>
   </div>
+
   <div style="margin-top: 200px;"></div>
   <div style="margin-top: 100px; margin-left: auto; margin-right: auto;">
     <div style="width: 900px; height: 100px; margin-left: auto; margin-right: auto;">
@@ -79,7 +84,6 @@ license that can be found in the LICENSE file.
 <!-- Scripts. -->
 <script src="./javascript/init.js" type="text/javascript"></script>
 <script src="./javascript/pages/index.js" type="text/javascript"></script>
-<script src="./javascript/copyright.js" type="text/javascript"></script>
 <script src="./javascript/searchbox.js" type="text/javascript"></script>
 <script src="./javascript/neuralcanvas.js"></script>
 </html>
