--- a/pages/contributing.html
+++ b/pages/contributing.html
@@ -51,7 +51,7 @@
     Default language packs of JuleC.
     <li><a href="https://github.com/jule-lang/jule/blob/main/parser"><x class="inline_code">parser/</x></a></li>
     Parser. <br>
-    Processes and analyzes AST models according to X's language rules.
+    Processes and analyzes AST models according to Jule's language rules.
     <li><a href="https://github.com/jule-lang/jule/blob/main/pkg"><x class="inline_code">pkg/</x></a></li>
     Utility packages. <br>
     The utility packages that JuleC uses.
