--- a/pages/docs.html
+++ b/pages/docs.html
@@ -12,9 +12,9 @@
 <!-- Body Div. -->
 <div id="body-div">
   <div id="side-navigation" style="margin-top: 60px; height: calc(100% - 100px);">
-    <a id="jule-lang" class="topic"><strong></strong> The Jule Programming Language</a> <br>
-    <a id="foreword" class="topic"><strong></strong> Foreword</a> <br>
-    <a id="introduction" class="topic"><strong></strong> Introduction</a> <br>
+    <a id="jule-lang" class="topic">The Jule Programming Language</a> <br>
+    <a id="foreword" class="topic">Foreword</a> <br>
+    <a id="introduction" class="topic">Introduction</a> <br>
     <a id="getting-started" class="topic"><strong>1.</strong> Getting Started</a> <br>
       <a id="getting-started-downloads" class="sub-topic"><strong>1.1.</strong> Downloads</a> <br>
       <a id="getting-started-install-from-source" class="sub-topic"><strong>1.2.</strong> Install from Source</a> <br>
@@ -49,41 +49,42 @@
       <a id="memory-pointers" class="sub-topic"><strong>7.1.</strong> Pointers</a> <br>
       <a id="memory-memory-management" class="sub-topic"><strong>7.2.</strong> Memory Management</a> <br>
       <a id="memory-references" class="sub-topic"><strong>7.3.</strong> References</a> <br>
-    <a id="error-handling" class="topic"><strong>8.</strong> Error Handling</a> <br>
-      <a id="error-handling-error-trait" class="sub-topic"><strong>8.1.</strong> Error Trait</a> <br>
-      <a id="error-handling-panics" class="sub-topic"><strong>8.2.</strong> Panics</a> <br>
-      <a id="error-handling-handling-panics" class="sub-topic"><strong>8.3.</strong> Handling Panics</a> <br>
-    <a id="types" class="topic"><strong>9.</strong> Types</a> <br>
-      <a id="types-aliasing" class="sub-topic"><strong>9.1.</strong> Aliasing</a> <br>
-      <a id="types-casting" class="sub-topic"><strong>9.2.</strong> Casting</a> <br>
-      <a id="types-generics" class="sub-topic"><strong>9.3.</strong> Generics</a> <br>
-      <a id="types-str" class="sub-topic"><strong>9.4.</strong> str</a> <br>
-      <a id="types-arrays" class="sub-topic"><strong>9.5.</strong> Arrays</a> <br>
-      <a id="types-slices" class="sub-topic"><strong>9.6.</strong> Slices</a> <br>
-      <a id="types-maps" class="sub-topic"><strong>9.7.</strong> Maps</a> <br>
-    <a id="type-statics" class="topic"><strong>10.</strong> Type Statics</a> <br>
-      <a id="type-statics-i8" class="sub-topic"><strong>10.1.</strong> i8</a> <br>
-      <a id="type-statics-i16" class="sub-topic"><strong>10.2.</strong> i16</a> <br>
-      <a id="type-statics-i32" class="sub-topic"><strong>10.3.</strong> i32</a> <br>
-      <a id="type-statics-i64" class="sub-topic"><strong>10.4.</strong> i64</a> <br>
-      <a id="type-statics-u8" class="sub-topic"><strong>10.5.</strong> u8</a> <br>
-      <a id="type-statics-u16" class="sub-topic"><strong>10.6.</strong> u16</a> <br>
-      <a id="type-statics-u32" class="sub-topic"><strong>10.7.</strong> u32</a> <br>
-      <a id="type-statics-u64" class="sub-topic"><strong>10.8.</strong> u64</a> <br>
-      <a id="type-statics-f32" class="sub-topic"><strong>10.9.</strong> f32</a> <br>
-      <a id="type-statics-f64" class="sub-topic"><strong>10.10.</strong> f64</a> <br>
-      <a id="type-statics-int" class="sub-topic"><strong>10.11.</strong> int</a> <br>
-      <a id="type-statics-uint" class="sub-topic"><strong>10.12.</strong> uint</a> <br>
-    <a id="cpp" class="topic"><strong>11.</strong> Cpp</a> <br>
-    <a id="cpp-api" class="sub-topic"><strong>11.1.</strong> API</a> <br>
-      <a id="cpp-interoperability" class="sub-topic"><strong>11.2.</strong> Interoperability</a> <br>
-    <a id="documenting" class="topic"><strong>12.</strong> Documenting</a> <br>
-      <a id="documenting-documentation-comments" class="sub-topic"><strong>12.1</strong> Documentation Comments</a> <br>
-      <a id="documenting-using-documenter" class="sub-topic"><strong>12.2</strong> Using Documenter</a> <br>
-    <a id="use-declarations" class="topic"><strong>13.</strong> Use Declarations</a> <br>
-    <a id="preprocessor" class="topic"><strong>14.</strong> Preprocessor</a> <br>
-      <a id="preprocessor-directives" class="sub-topic"><strong>14.1</strong> Directives</a> <br>
-    <a id="stdlib" class="topic"><strong>15.</strong> Standard Library</a> <br>
+    <a id="unsafe-jule" class="topic"><strong>8.</strong> Unsafe Jule</a> <br>
+    <a id="error-handling" class="topic"><strong>9.</strong> Error Handling</a> <br>
+      <a id="error-handling-error-trait" class="sub-topic"><strong>9.1.</strong> Error Trait</a> <br>
+      <a id="error-handling-panics" class="sub-topic"><strong>9.2.</strong> Panics</a> <br>
+      <a id="error-handling-handling-panics" class="sub-topic"><strong>9.3.</strong> Handling Panics</a> <br>
+    <a id="types" class="topic"><strong>10.</strong> Types</a> <br>
+      <a id="types-aliasing" class="sub-topic"><strong>10.1.</strong> Aliasing</a> <br>
+      <a id="types-casting" class="sub-topic"><strong>10.2.</strong> Casting</a> <br>
+      <a id="types-generics" class="sub-topic"><strong>10.3.</strong> Generics</a> <br>
+      <a id="types-str" class="sub-topic"><strong>10.4.</strong> str</a> <br>
+      <a id="types-arrays" class="sub-topic"><strong>10.5.</strong> Arrays</a> <br>
+      <a id="types-slices" class="sub-topic"><strong>10.6.</strong> Slices</a> <br>
+      <a id="types-maps" class="sub-topic"><strong>10.7.</strong> Maps</a> <br>
+    <a id="type-statics" class="topic"><strong>11.</strong> Type Statics</a> <br>
+      <a id="type-statics-i8" class="sub-topic"><strong>11.1.</strong> i8</a> <br>
+      <a id="type-statics-i16" class="sub-topic"><strong>11.2.</strong> i16</a> <br>
+      <a id="type-statics-i32" class="sub-topic"><strong>11.3.</strong> i32</a> <br>
+      <a id="type-statics-i64" class="sub-topic"><strong>11.4.</strong> i64</a> <br>
+      <a id="type-statics-u8" class="sub-topic"><strong>11.5.</strong> u8</a> <br>
+      <a id="type-statics-u16" class="sub-topic"><strong>11.6.</strong> u16</a> <br>
+      <a id="type-statics-u32" class="sub-topic"><strong>11.7.</strong> u32</a> <br>
+      <a id="type-statics-u64" class="sub-topic"><strong>11.8.</strong> u64</a> <br>
+      <a id="type-statics-f32" class="sub-topic"><strong>11.9.</strong> f32</a> <br>
+      <a id="type-statics-f64" class="sub-topic"><strong>11.10.</strong> f64</a> <br>
+      <a id="type-statics-int" class="sub-topic"><strong>11.11.</strong> int</a> <br>
+      <a id="type-statics-uint" class="sub-topic"><strong>11.12.</strong> uint</a> <br>
+    <a id="cpp" class="topic"><strong>12.</strong> Cpp</a> <br>
+    <a id="cpp-api" class="sub-topic"><strong>12.1.</strong> API</a> <br>
+      <a id="cpp-interoperability" class="sub-topic"><strong>12.2.</strong> Interoperability</a> <br>
+    <a id="documenting" class="topic"><strong>13.</strong> Documenting</a> <br>
+      <a id="documenting-documentation-comments" class="sub-topic"><strong>13.1</strong> Documentation Comments</a> <br>
+      <a id="documenting-using-documenter" class="sub-topic"><strong>13.2</strong> Using Documenter</a> <br>
+    <a id="use-declarations" class="topic"><strong>14.</strong> Use Declarations</a> <br>
+    <a id="preprocessor" class="topic"><strong>15.</strong> Preprocessor</a> <br>
+      <a id="preprocessor-directives" class="sub-topic"><strong>15.1</strong> Directives</a> <br>
+    <a id="stdlib" class="topic"><strong>16.</strong> Standard Library</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
